# fmt_motion_detection

./: .gitmodules  CMakeLists.txt  README.md
include/fmt_motion_detection/: image_differencing.h  motion_detection.h
src/: image_differencing.cpp  image_main.cpp  motion_detection.cpp  video_main.cpp
